<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.zkhan.majorandroidcomponents.MainScreenActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_website"
        android:id="@+id/btnWebsite"
        android:onClick="onButtonLaunchWebsite"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_alignEnd="@+id/button"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcastrxer"
        android:id="@+id/button"
        android:layout_below="@+id/btnWebsite"
        android:layout_alignParentStart="true"
        android:onClick="onButtonMyReceiverIntent"
        android:layout_alignEnd="@+id/button2"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:onClick="onButtonMyService"
        android:layout_alignEnd="@+id/button3"
        android:layout_marginTop="15dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myContentProvider"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button4"
        android:onClick="onButtonMyContentProvider"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AsynkTask"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button5"
        android:onClick="onButtonAsynkTask"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myDatabase"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:onClick="onButtonMyDatabase"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multithread"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true"
        android:onClick="onButtonMultiThread"
        android:layout_alignEnd="@+id/button5"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inprogress"
        android:id="@+id/button7"
        android:layout_alignTop="@+id/btnWebsite"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/button8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inprogress"
        android:id="@+id/button8"
        android:layout_above="@+id/button2"
        android:layout_alignStart="@+id/button9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inprogress"
        android:id="@+id/button9"
        android:layout_above="@+id/button3"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inprogress"
        android:id="@+id/button10"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignStart="@+id/button9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inprogress"
        android:id="@+id/button11"
        android:layout_above="@+id/button6"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inprogress"
        android:id="@+id/button12"
        android:layout_above="@+id/button5"
        android:layout_alignStart="@+id/button11" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inprogress"
        android:id="@+id/button13"
        android:layout_alignTop="@+id/button6"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
